--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with LeadMark landing page.">
+    <meta name="description" content="iOTA is an initiative by students of Indian Institute of Space Science and Technology (IIST ) , Thiruvananthapuram to provide quality paper solving practice for students preparing for JEE Main.">
     <meta name="author" content="Devcrud">
     <title>iOTA| Home</title>
     <!-- font icons -->
