--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="iOTA is an initiative by students of Indian Institute of Space Science and Technology (IIST ) , Thiruvananthapuram to provide quality paper solving practice for students preparing for JEE Main.">
+    <meta name="description" content="">
     <meta name="author" content="Devcrud">
     <title>iOTA| Home</title>
     <!-- font icons -->
@@ -17,7 +17,7 @@
     <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/imgs/LOGO.png" alt="">
+                <img src="assets/imgs/LOGO.png" style="width: 90px;" alt="">
             </a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -104,6 +104,15 @@
                     <div class="card border-0 mb-4">
                         <img src="assets/imgs/blog-2.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
+                            <h6 class="card-title">2 Test Combo</h6>
+                            <p>offer price of Rs. 149( Rs. 74.5per test ) </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 mb-4">
+                        <img src="assets/imgs/blog-3.jpg" alt="" class="card-img-top w-100">
+                        <div class="card-body">                         
                             <h6 class="card-title">3 Test Combo</h6>
                             <p>offer price of Rs. 199( Rs. 66.3 per test ) </p>
                         </div>
@@ -123,6 +132,9 @@
                 <div class="col-md-5 my-3">
                     <h6 class="mb-0">Phone</h6>
                     <p class="mb-4">+ 123-456-7890</p>
+
+                    <h6 class="mb-0">Address</h6>
+                    <p class="mb-4">12345 Fake ST NoWhere AB Country</p>
 
                     <h6 class="mb-0">Email</h6>
                     <p class="mb-0">info@website.com</p>
