--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <img src="assets/imgs/blog-1.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">One Test</h6>
-                            <p>Rs 99</p>
+                            <p>price of Rs 99 for one test</p>
                         </div>
                     </div>
                 </div>
@@ -131,9 +131,10 @@
             <div class="row align-items-center">
                 <div class="col-md-5 my-3">
                     <h6 class="mb-0">Phone</h6>
-                    <p class="mb-4">+ 123-456-7890</p>
+                    <p class="mb-4">Prasad Dhongadi: 90285 96595</p>
+		    <p class="mb-4">Antonio: 62382 47407</p>
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">info@website.com</p>
+                    <p class="mb-0">iotadhanak@gmail.com</p>
                     <p></p>
                 </div>
                 
