--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <button class="btn btn-primary"><a>Register</a></button>
+                            <button class="btn btn-primary"><a href ="https://docs.google.com/forms/d/e/1FAIpQLScGnyk6Tsg_L1RyO9EizAQ6lEuk6wvFfemqwPUl38x3FUxjvw/viewform?usp=sf_link">Register</a></button>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
                         <div class="card border-0 ">
                             <div class="card-body">                         
                                 <h6 class="card-title">Click below to Register for the examination</h6>
-                                <button class="btn btn-primary"><a>Register</a></button>
+                                <button class="btn btn-primary"><a href = "https://docs.google.com/forms/d/e/1FAIpQLScGnyk6Tsg_L1RyO9EizAQ6lEuk6wvFfemqwPUl38x3FUxjvw/viewform?usp=sf_link">Register</a></button>
                             </div>
                         </div>
                     </div>
