--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
-                    <h6 class="section-title mb-0">What is iOTA?</h6>
+                    <h6 class="section-title mb-0">IIST OPEN TEST FOR ASPIRANTS of JEE MAIN</h6>
                     <p >iOTA is an initiative by students of Indian Institute of Space Science and Technology (IIST ) , Thiruvananthapuram to provide quality paper solving practice for students preparing for JEE Main. iOTA is held in 2nd week of January. 
                         The question paper is designed by top rankers at IIST with guidance by their mentors and with great effort and research on the trends and their personal experience of giving JEE . This year the examination is conducted on specially designed software to give the students a real feel of JEE exam.
                         </p>
