--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Page Header -->
     <header class="header">
         <div class="overlay">
-            <h1 class="title" style="font-size: 40px;"> IIST OPEN TEST FOR ASPIRANTS of JEE </h1>  
+            <h1 class="title" style="font-size: 40px;"> IIST OPEN TEST FOR ASPIRANTS of JEE Main </h1>  
         </div>  
         <div class="shape">
             <svg viewBox="0 0 1500 200">
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
-                    <h6 class="section-title mb-0">IIST OPEN TEST FOR ASPIRANTS of JEE MAIN</h6>
+                    <h6 class="section-title mb-0">ALL INDIA OPEN MOCK TEST FOR JEE MAIN</h6>
                     <p >iOTA is an initiative by students of Indian Institute of Space Science and Technology (IIST ) , Thiruvananthapuram to provide quality paper solving practice for students preparing for JEE Main. iOTA is held in 2nd week of January. 
                         The question paper is designed by top rankers at IIST with guidance by their mentors and with great effort and research on the trends and their personal experience of giving JEE . This year the examination is conducted on specially designed software to give the students a real feel of JEE exam.
                         </p>
