--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <img src="assets/imgs/blog-1.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">One Test</h6>
-                            <p>price of Rs 99 for one test</p>
+                            <p id ="price99">price of Rs 99 for one test</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         <img src="assets/imgs/blog-2.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">2 Test Combo</h6>
-                            <p>offer price of Rs. 149( Rs. 74.5per test ) </p>
+                            <p id ="price149">offer price of Rs. 149( Rs. 74.5per test ) </p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <img src="assets/imgs/blog-3.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">3 Test Combo</h6>
-                            <p>offer price of Rs. 199( Rs. 66.3 per test ) </p>
+                            <p id ="price199">offer price of Rs. 199( Rs. 66.3 per test ) </p>
                         </div>
                     </div>
                 </div>
@@ -187,6 +187,34 @@
 
     <!-- LeadMark js -->
     <script src="assets/js/leadmark.js"></script>
+<script>
+    // Get the user's country code
+   var apiKey = "YOUR_API_KEY_HERE";
 
+// Make a request to the geoplugin.net API to get the user's country code
+var requestUrl = "http://www.geoplugin.net/json.gp?key=" + apiKey;
+
+// Send the request and process the response
+var xhr = new XMLHttpRequest();
+xhr.open("GET", requestUrl);
+xhr.onload = function() {
+  if (xhr.status === 200) {
+    // Parse the response JSON
+    var response = JSON.parse(xhr.responseText);
+
+    // Get the country code from the response
+    var countryCode = response.geoplugin_countryCode;
+
+    // If the user is not in India, update the greeting text
+    if (countryCode !== "IN") {
+      document.getElementById("price99").innerHTML = "300";
+        document.getElementById("price149").innerHTML = "400";
+        document.getElementById("price199").innerHTML = "500";
+    }
+  }
+};
+xhr.send();
+    }
+  </script>
 </body>
 </html>
