--- a/index.html
+++ b/index.html
@@ -96,7 +96,39 @@
         </div>
     </section>
     <!-- End OF About Section -->
+    <section class="section" id="dates">
+        <div class="container">
+            <h6 class="section-title mb-0 text-center">Dates</h6>
+            <h6 class="section-subtitle mb-5 text-center">Last date for registration is 31st December 2022</h6>
 
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card border-0 mb-4">
+                        <img src="assets\imgs\date1.jpeg" alt="" class="card-img-top w-100">
+                        <div class="card-body">                         
+                            <h3 class="card-title">First Examination</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 mb-4">
+                        <img src="assets\imgs\date2.jpeg" alt="" class="card-img-top w-100">
+                        <div class="card-body">                         
+                            <h3 class="card-title">Second Examination</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 mb-4">
+                        <img src="assets\imgs\date3.jpeg" alt="" class="card-img-top w-100">
+                        <div class="card-body">                         
+                            <h3 class="card-title">Third Examination</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Blog Section -->
     <section class="section" id="blog">
         <div class="container">
