--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <header class="header">
         <div class="overlay">
             <h1 class="title" style="font-size: 40px;"> IIST OPEN TEST FOR ASPIRANTS of JEE Main </h1>  
+             <a href ="https://docs.google.com/forms/d/e/1FAIpQLScGnyk6Tsg_L1RyO9EizAQ6lEuk6wvFfemqwPUl38x3FUxjvw/viewform?usp=sf_link"><button class="btn btn-primary">Register Now</button></a>
+ 
         </div>  
         <div class="shape">
             <svg viewBox="0 0 1500 200">
