--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + LeadMark main styles -->
     <link rel="stylesheet" href="assets/css/leadmark.css">
+     <script>
+        // Check the value of the "location" meta tag
+        var location = document.querySelector('meta[name=location]').content;
+      
+        // If the user is not in India, modify the HTML
+        if (location == "India") {
+          // Modify the HTML here (e.g. remove or replace content specific to India)
+          price1 = document.getElementById("price1");
+          price1.innerHTML ="UAE Price";
+        }
+      </script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -144,7 +155,7 @@
                         <img src="assets/imgs/blog-1.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">One Test</h6>
-                            <p id ="price99">price of Rs 99 for one test</p>
+                            <p id="price1"">price of Rs 99 for one test</p>
                         </div>
                     </div>
                 </div>
