--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-
+<meta name="location" content="">
     <!-- page Navigation -->
     <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
