--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
     // Use the OpenCage Geocoding API to lookup the user's country or region
     var xhr = new XMLHttpRequest();
-    xhr.open("GET", "https://api.opencagedata.com/geocode/v1/json?q=" + latitude + "+" + longitude + "&key=YOUR_API_KEY");
+    xhr.open("GET", "https://api.opencagedata.com/geocode/v1/json?q=" + latitude + "+" + longitude + "&key=7e06f9c741d843e68be186d7ddc93cfa");
     xhr.onload = function() {
       if (xhr.status === 200) {
         // Parse the response from the API
