--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         // Get the user's country or region from the response
         var country = data.results[0].components.country;
-
+           console.log(country);
         // If the user is not in India, modify the HTML
         if (country !== "India") {
           // Modify the HTML here (e.g. remove or replace content specific to India)
