--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         if (country !== "India") {
           // Modify the HTML here (e.g. remove or replace content specific to India)
           var price1 = document.getElementById("price1");
-            price1.innerHTML = "UAE Price";
+            price1.innerHTML = "price of 30 AED for one test";
            console.log(country);
         }
       }
