--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <img src="assets/imgs/blog-2.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">2 Test Combo</h6>
-                            <p id ="price149">offer price of Rs. 149( Rs. 74.5per test ) </p>
+                            <p id ="price2">offer price of Rs. 149( Rs. 74.5per test ) </p>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         <img src="assets/imgs/blog-3.jpg" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
                             <h6 class="card-title">3 Test Combo</h6>
-                            <p id ="price199">offer price of Rs. 199( Rs. 66.3 per test ) </p>
+                            <p id ="price3">offer price of Rs. 199( Rs. 66.3 per test ) </p>
                         </div>
                     </div>
                 </div>
@@ -244,7 +244,9 @@
           // Modify the HTML here (e.g. remove or replace content specific to India)
           var price1 = document.getElementById("price1");
             price1.innerHTML = "price of 30 AED for one test";
-           console.log(country);
+            price2.innerHTML = "price of 40 AED for two tests";
+            price3.innerHTML = "price of 50 AED for three test";                                                 
+                                                             
         }
       }
     };
