--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="section" id="dates">
         <div class="container">
             <h6 class="section-title mb-0 text-center">Dates</h6>
-            <h6 class="section-subtitle mb-5 text-center">Last date for registration is 31st December 2022</h6>
+            <h6 class="section-subtitle mb-5 text-center">Last date for registration is 5th January 2023</h6>
 
             <div class="row">
                 <div class="col-md-4">
